# melange

./: .env.sample  Cargo.toml  Dockerfile  Dockerfile.spice  Justfile  README.md  docker-compose.yml  spicepod.yaml
.github/workflows/: docker-publish.yml
api/: Cargo.toml
api/src/: config.rs  error.rs  main.rs  openai.rs  serde_utils.rs
api/src/v1/: mod.rs
cli/: Cargo.toml
cli/src/: main.rs
fff/: Cargo.toml
fff/src/: lib.rs  pbp.rs  rosters.rs
spiceai/: spicepod.yaml
spiceai/spicepods/nflverse/pbp/: spicepod.yaml
src/: main.rs  pbp.rs
web/: Caddyfile  Dockerfile  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.js  tsconfig.json
web/src/: app.css
web/src/lib/api/: _client.ts  _openai.ts  index.ts
web/src/lib/components/: Chat.svelte  ChatDrawer.svelte  PlayerAutocomplete.svelte  TeamAutocomplete.svelte
web/src/lib/stores/: toasts.svelte.ts
web/src/lib/system/: Autocomplete.svelte  DataTable.svelte  Octocat.svelte  Toasts.svelte
web/src/routes/: +layout.svelte  +layout.ts  +page.svelte
