[package]
name = "melange-api"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3"
tokio = { version = "1.14.0", features = [
    "macros",
    "rt-multi-thread",
    "signal",
] }
axum = { version = "0.7.3", features = ["tower-log", "macros"] }
axum-extra = { version = "0.9.3", features = ["typed-header", "cookie", "typed-routing"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.117"
tower-http = { version = "0.5.0", features = [
    "catch-panic",
    "cors",
    "compression-full",
    "sensitive-headers",
    "timeout",
    "trace",
] }

async-openai = "0.23.0"
spiceai.workspace = true
arrow.workspace = true

# Error handling
anyhow = "1.0.48"
thiserror = "1.0.30"

# Utilities
time = { version = "0.3.30", features = ["serde", "serde-human-readable", "formatting", "parsing"] }
uuid = { version = "1.0", features = ["serde"] }
async-trait = "0.1.51"
itertools = "0.13"
log = "0.4.14"
parse-display = "0.10.0"
url = { version = "2.5.0", features = ["serde"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
regex = "1.10.4"
# tokio-retry = "0.3.0"
# toml = "0.8.13"

maglev = { git = "https://github.com/meetsidebar/maglev.git", features = ["basic"] }
fff = { path = "../fff" }
